Added the side contents

--- a/index.html
+++ b/index.html
@@ -219,13 +219,131 @@
     <div class="right-container">
         <div class="side-contents">
             <div class="vido-content">
-                <video width="100px" height="100" controls>
-                    <source src="movie.mp4" type="video/mp4">
-                    <source src="movie.ogg" type="video/ogg">
-                    Your browser does not support the video tag.
-                  </video>
+                <img src="media/cruel-war-scenes-digital-painting.jpg" alt="Video one" width="168px" height="94px">
             </div>
-            <div class="text-content"></div>
+            <div class="text-content">
+                <p class="side-text1">Contributing to Open Source for the first time</p>
+                <p class="side-text2">Meta Open Source</p>
+                <p class="side-text3">206K views 2 years ago</p>
+            </div>
+        </div>
+
+
+        <div class="side-contents">
+            <div class="vido-content">
+                <img src="media/cruel-war-scenes-digital-painting.jpg" alt="Video one" width="168px" height="94px">
+            </div>
+            <div class="text-content">
+                <p class="side-text1">Contributing to Open Source for the first time</p>
+                <p class="side-text2">Meta Open Source</p>
+                <p class="side-text3">206K views 2 years ago</p>
+            </div>
+        </div>
+
+
+        <div class="side-contents">
+            <div class="vido-content">
+                <img src="media/cruel-war-scenes-digital-painting.jpg" alt="Video one" width="168px" height="94px">
+            </div>
+            <div class="text-content">
+                <p class="side-text1">Contributing to Open Source for the first time</p>
+                <p class="side-text2">Meta Open Source</p>
+                <p class="side-text3">206K views 2 years ago</p>
+            </div>
+        </div>
+
+        <div class="side-contents">
+            <div class="vido-content">
+                <img src="media/cruel-war-scenes-digital-painting.jpg" alt="Video one" width="168px" height="94px">
+            </div>
+            <div class="text-content">
+                <p class="side-text1">Contributing to Open Source for the first time</p>
+                <p class="side-text2">Meta Open Source</p>
+                <p class="side-text3">206K views 2 years ago</p>
+            </div>
+        </div>
+
+
+        <div class="side-contents">
+            <div class="vido-content">
+                <img src="media/cruel-war-scenes-digital-painting.jpg" alt="Video one" width="168px" height="94px">
+            </div>
+            <div class="text-content">
+                <p class="side-text1">Contributing to Open Source for the first time</p>
+                <p class="side-text2">Meta Open Source</p>
+                <p class="side-text3">206K views 2 years ago</p>
+            </div>
+        </div>
+
+
+        <div class="side-contents">
+            <div class="vido-content">
+                <img src="media/cruel-war-scenes-digital-painting.jpg" alt="Video one" width="168px" height="94px">
+            </div>
+            <div class="text-content">
+                <p class="side-text1">Contributing to Open Source for the first time</p>
+                <p class="side-text2">Meta Open Source</p>
+                <p class="side-text3">206K views 2 years ago</p>
+            </div>
+        </div>
+
+
+        <div class="side-contents">
+            <div class="vido-content">
+                <img src="media/cruel-war-scenes-digital-painting.jpg" alt="Video one" width="168px" height="94px">
+            </div>
+            <div class="text-content">
+                <p class="side-text1">Contributing to Open Source for the first time</p>
+                <p class="side-text2">Meta Open Source</p>
+                <p class="side-text3">206K views 2 years ago</p>
+            </div>
+        </div>
+
+        <div class="side-contents">
+            <div class="vido-content">
+                <img src="media/cruel-war-scenes-digital-painting.jpg" alt="Video one" width="168px" height="94px">
+            </div>
+            <div class="text-content">
+                <p class="side-text1">Contributing to Open Source for the first time</p>
+                <p class="side-text2">Meta Open Source</p>
+                <p class="side-text3">206K views 2 years ago</p>
+            </div>
+        </div>
+
+
+        <div class="side-contents">
+            <div class="vido-content">
+                <img src="media/cruel-war-scenes-digital-painting.jpg" alt="Video one" width="168px" height="94px">
+            </div>
+            <div class="text-content">
+                <p class="side-text1">Contributing to Open Source for the first time</p>
+                <p class="side-text2">Meta Open Source</p>
+                <p class="side-text3">206K views 2 years ago</p>
+            </div>
+        </div>
+
+
+        <div class="side-contents">
+            <div class="vido-content">
+                <img src="media/cruel-war-scenes-digital-painting.jpg" alt="Video one" width="168px" height="94px">
+            </div>
+            <div class="text-content">
+                <p class="side-text1">Contributing to Open Source for the first time</p>
+                <p class="side-text2">Meta Open Source</p>
+                <p class="side-text3">206K views 2 years ago</p>
+            </div>
+        </div>
+
+
+        <div class="side-contents">
+            <div class="vido-content">
+                <img src="media/cruel-war-scenes-digital-painting.jpg" alt="Video one" width="168px" height="94px">
+            </div>
+            <div class="text-content">
+                <p class="side-text1">Contributing to Open Source for the first time</p>
+                <p class="side-text2">Meta Open Source</p>
+                <p class="side-text3">206K views 2 years ago</p>
+            </div>
         </div>
 
 
